--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         sona sasidharan</div>
                     <div class="abt-details">
                         <i class="fa fa-phone"></i>
-                        9876543210</div>
+                        9876543210</div> 
                     <div class="abt-details"> 
                         <i class="fa fa-envelope"></i>
                         sonasasidharan@gmail.com</div>
@@ -70,15 +70,31 @@
         </section>
         <section id="skills">
             <div class="heading1">
-                <h1>Skills</h1>
+                <h1> My Skills</h1>
+                </div>
                 <div class="abt-skill">
-                    html
-                    css
-                    python
-                    django
+                  <h3>HTML</h3>
+                  <div class="bar">
+                    <div class="html"><span>90%</span></div>
+                  </div>
+                    <h3>CSS</h3>
+                    <div class="bar">
+                      <div class="css"><span>90%</span></div>
+                </div>
+                    <h3>PHP</h3>
+                    <div class="bar">
+                      <div class="php"><span>70%</span></div>
+                    </div>
+                        <h3>PYTHON</h3>
+                        <div class="bar">
+                          <div class="python"><span>90%</span></div>
+                        </div>
+                            <h3>C</h3>
+                            <div class="bar">
+                              <div class="c"><span>80%</span></div>
+                            </div>
                 
                 </div>
-            </div>
         </section>
         <section id="contact">
             <div class="abt-con">
